@@ -21,6 +21,17 @@
 </tr>
 </table>
 <p>
+2009-07-23  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/random.c (DestroyMagickRandomGenerator): Cleanup thread
+        specific random kernel data.
+
+  <LI> magick/tsd.c (MagickTsdKeyCreate): Fix glitch when built without
+        any threads support.
+
+</UL>
+<p>
 2009-07-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
